--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Ecommerce</title>
+  <title>UefaFootballLeague</title>
   <link rel="stylesheet" href="style/bootstrap.min.css">
   <link rel="stylesheet" href="style/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +15,8 @@
 <body class="d-flex flex-column h-100 bg-white">
 
   <div class="container-lg">
-    <header class="header mb-5">
-      <nav class="header-nav navbar navbar-expand-sm navbar-light bg-light mt-2"
-        style="border-bottom: 2px solid #e9e9e9;">
+    <header class="header shadow-sm mb-5">
+      <nav class="header-nav navbar navbar-expand-sm navbar-light rounded bg-light mt-2">
         <a href="/index.html" class="navbar-brand p-0 mr-0 ">
           <img src="/img/logo.svg" alt="logo">
         </a>
@@ -50,90 +49,262 @@
       </nav>
     </header>
 
-    <main class="main">
-      <div class="main-top text-center">
-        <h2 class="main-heading h1 display-4 text-center">Today's match</h2>
+    <main class="main py-3 mb-5">
+      <div class="main-top text-center mb-4">
+        <h2 class="main-heading h1 display-4 text-center text-light">Today's match</h2>
         <img src="./img/uefa-logo.svg" alt="" width="50px" height="50px">
       </div>
 
-      <div class="row">
-        <div class="col-4 text-center">
-          <a href="#">
-            <img class="main-logo mb-3" src="./img/real-madrid.svg" alt="" width="250px" height="250px">
-          </a>
+      <div class="conrainer-lg">
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <a href="#">
+              <img class="main-logo mb-3" src="./img/real-madrid.svg" alt="" width="250px" height="250px">
+            </a>
 
-          <h3 class="main-title name h4 font-weight-bold mb-4">Real madrid</h3>
+            <h3 class="main-title name h5 font-weight-bold mb-4 text-light">Real madrid</h3>
 
-          <dl>
-            <div class="main-description mb-2 d-flex justify-content-center">
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">Wins:</dt>
-                <dd class="p-0 mr-2 mb-0">100 |</dd>
+            <dl class="main-dl">
+              <div class="main-description mb-2 d-flex justify-content-center">
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
+                  <dd class="main-desc p-0 mr-1 mb-0 text-light">10 |</dd>
+                </div>
+
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
+                  <dd class="main-desc p-0 mr-1 mb-0 text-light">0 |</dd>
+                </div>
+
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
+                  <dd class="main-desc p-0 mr-0 mb-0 text-light">0</dd>
+                </div>
               </div>
 
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">loses:</dt>
-                <dd class="p-0 mr-2 mb-0">0 |</dd>
+              <div class="d-flex justify-content-center">
+                <dt class="main-desc mr-t-light font-weight-normal text-light">Leaderboard position:</dt>
+                <dd class="main-desc text-light">1</dd>
               </div>
+            </dl>
 
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">Drawns:</dt>
-                <dd class="p-0 mr-0 mb-0">0</dd>
-              </div>
+          </div>
+
+          <div class="col-8 col-sm-4 mb-4 mx-auto rounded">
+            <div class="d-flex flex-column justify-content-center h-100">
+              <button class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+                style="border: 1px solid #d1d1d1" type="button" data-toggle="modal" data-target="#modal">
+                Watch match promo
+              </button>
+
+              <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+                style="border: 1px solid #d1d1d1" href="#">
+                Buy tickets
+              </a>
+
+              <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+                style="border: 1px solid #d1d1d1" href="#">
+                Buy merch
+              </a>
+
+              <button class="main-btn__group btn btn-light bg-transparent text-light rounded" data-toggle="collapse"
+                data-target="#collapseBtn" style="border: 1px solid #d1d1d1">
+                More info
+              </button>
             </div>
+          </div>
 
-            <div class="d-flex justify-content-center">
-              <dt class="mr-2 text-secondary font-weight-normal">Leaderboard position:</dt>
-              <dd>1</dd>
-            </div>
-          </dl>
+          <div class="col-sm-4 text-center">
+            <a href="#">
+              <img class="main-logo mb-3" src="./img/pakhtakor.svg" alt="" width="250px" height="250px">
+            </a>
 
-        </div>
+            <h3 class="main-title name h5 font-weight-bold mb-4 text-light">FC Barcelona</h3>
 
-        <div class="col-4">
+            <dl class="main-dl">
+              <div class="main-description mb-2 d-flex justify-content-center">
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
+                  <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
+                </div>
 
-        </div>
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
+                  <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
+                </div>
 
-        <div class="col-4 text-center">
-          <a href="#">
-            <img class="main-logo mb-3" src="./img/pakhtakor.svg" alt="" width="250px" height="250px">
-          </a>
-
-          <h3 class="main-title name h4 font-weight-bold mb-4">Pakhtakor FC</h3>
-
-          <dl>
-            <div class="main-description mb-2 d-flex justify-content-center">
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">Wins:</dt>
-                <dd class="p-0 mr-2 mb-0">100 |</dd>
+                <div class="d-flex">
+                  <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
+                  <dd class="main-desc pbold mr-0 mb-0 text-light">0</dd>
+                </div>
               </div>
 
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">loses:</dt>
-                <dd class="p-0 mr-2 mb-0">100 |</dd>
+              <div class="d-flex justify-content-center">
+                <dt class="main-desc p-0 font-weight-normal text-light">Leaderboard position:</dt>
+                <dd class="main-desc text-light">10</dd>
               </div>
-
-              <div class="d-flex">
-                <dt class="p-0 mr-2 font-weight-normal text-secondary">Drawns:</dt>
-                <dd class="p-0 mr-0 mb-0">0</dd>
-              </div>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <dt class="mr-2 text-secondary font-weight-normal">Leaderboard position:</dt>
-              <dd>10</dd>
-            </div>
-          </dl>
+            </dl>
+          </div>
         </div>
       </div>
+
     </main>
   </div>
 
+  <div class="container-lg">
+    <div class="collapse" id="collapseBtn">
+      <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+            aria-selected="true">Team</a>
+        </li>
+        <li class="nav-item d-flex" role="presentation">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+            aria-selected="false">Top goals
+          </a>
+        </li>
+      </ul>
+    </div>
+
+
+    <div class="tab-content mb-4" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div class="container-lg">
+          <div class="row justify-content-center justify-content-md-between">
+            <table class="table table-striped col-lg-5">
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
+                  </th>
+                  <th scope="col">Name:</th>
+                  <th scope="col">Goals:</th>
+                  <th scope="col">Age:</th>
+                  <th>Selected:</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Hazard</td>
+                  <td>7</td>
+                  <td>29</td>
+                  <td><input name="radio" type="checkbox"></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Benzema</td>
+                  <td>26</td>
+                  <td>32</td>
+                  <td><input name="radio" type="checkbox"></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Modric</td>
+                  <td>12</td>
+                  <td>35</td>
+                  <td><input name="radio" type="checkbox" disabled></td>
+                </tr>
+              </tbody>
+            </table>
+
+            <table class="table table-striped col-lg-5">
+              <thead>
+                <tr>
+                  <th scope="col">
+                    <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
+                  </th>
+                  <th scope="col">Name:</th>
+                  <th scope="col">Goals:</th>
+                  <th scope="col">Age:</th>
+                  <th>Selected:</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Messi</td>
+                  <td>36</td>
+                  <td>33</td>
+                  <td><input name="radio" type="checkbox"></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Grizmann</td>
+                  <td>18</td>
+                  <td>32</td>
+                  <td><input name="radio" type="checkbox"></td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Pique</td>
+                  <td>4</td>
+                  <td>35</td>
+                  <td><input name="radio" type="checkbox" disabled></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+      </div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="py-4 border-bottom d-flex flex-column justify-content-start">
+          <h3 class="h2 font-weight-bold mb-3">Real madrid</h3>
+          <a class="mr-4" href="https://www.youtube.com/watch?v=9mqYGkyMWak&ab_channel=47Football">Full video</a>
+          <iframe class="tab-img" src="https://www.youtube.com/embed/80pBEvJ_6bI" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+        <div class="py-4 d-flex flex-column justify-content-start">
+          <h3 class="h4 font-weight-bold mb-3">FC Barcelona</h3>
+          <a class="mr-4" href="https://youtu.be/idLt1zL5rnE">Full video</a>
+          <iframe class="tab-img" src="https://www.youtube.com/embed/9mqYGkyMWak" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        <h2 class="h2 mb-2">Full of Vitamins!</h2>
+        <p class="text-dark">
+          We work hard to ensure that the fruit and vegetables we sell are fresh and high in quality. If we don’t
+          grow them ourselves, we source them from carefully chosen suppliers, preferring to buy locally whenever
+          possible.
+        </p>
+      </div>
+
+    </div>
+  </div>
+
+
+
   <footer class="site-footer py-3 mt-auto text-center bg-white">
-    <div class="container">
+    <div class="container-lg">
       <p class="mb-0 small">Copyright &copy; Abdulloh corp.</p>
     </div>
   </footer>
+
+  <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header d-flex align-content-center">
+          <h5 class="modal-title font-weight-bold" id="exampleModalLabel">Real madrid vs FC Barcelona</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <iframe width="100%" height="409" src="https://www.youtube.com/embed/1CNkQwsgbmc" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <script src="js/jquery-3.6.0.min.js"></script>
