--- a/index.html
+++ b/index.html
@@ -54,100 +54,96 @@
         <h2 class="main-heading h1 display-4 text-center text-light">Today's match</h2>
         <img src="./img/uefa-logo.svg" alt="" width="50px" height="50px">
       </div>
+      <div class="row justify-content-center">
+        <div class="col-10 col-sm-4 text-center">
+          <a href="#">
+            <img class="main-logo mb-3" src="./img/real-madrid.svg" alt="" width="250px" height="250px">
+          </a>
 
-      <div class="conrainer-lg">
-        <div class="row">
-          <div class="col-sm-4 text-center">
-            <a href="#">
-              <img class="main-logo mb-3" src="./img/real-madrid.svg" alt="" width="250px" height="250px">
-            </a>
+          <h3 class="main-title name h5 font-weight-bold mb-4 text-light">Real madrid</h3>
 
-            <h3 class="main-title name h5 font-weight-bold mb-4 text-light">Real madrid</h3>
-
-            <dl class="main-dl">
-              <div class="main-description mb-2 d-flex justify-content-center">
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
-                  <dd class="main-desc p-0 mr-1 mb-0 text-light">10 |</dd>
-                </div>
-
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
-                  <dd class="main-desc p-0 mr-1 mb-0 text-light">0 |</dd>
-                </div>
-
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
-                  <dd class="main-desc p-0 mr-0 mb-0 text-light">0</dd>
-                </div>
+          <dl class="main-dl">
+            <div class="main-description mb-2 d-flex justify-content-center">
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
+                <dd class="main-desc p-0 mr-1 mb-0 text-light">10 |</dd>
               </div>
 
-              <div class="d-flex justify-content-center">
-                <dt class="main-desc mr-t-light font-weight-normal text-light">Leaderboard position:</dt>
-                <dd class="main-desc text-light">1</dd>
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
+                <dd class="main-desc p-0 mr-1 mb-0 text-light">0 |</dd>
               </div>
-            </dl>
 
-          </div>
-
-          <div class="col-8 col-sm-4 mb-4 mx-auto rounded">
-            <div class="d-flex flex-column justify-content-center h-100">
-              <button class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
-                style="border: 1px solid #d1d1d1" type="button" data-toggle="modal" data-target="#modal">
-                Watch match promo
-              </button>
-
-              <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
-                style="border: 1px solid #d1d1d1" href="#">
-                Buy tickets
-              </a>
-
-              <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
-                style="border: 1px solid #d1d1d1" href="#">
-                Buy merch
-              </a>
-
-              <button class="main-btn__group btn btn-light bg-transparent text-light rounded" data-toggle="collapse"
-                data-target="#collapseBtn" style="border: 1px solid #d1d1d1">
-                More info
-              </button>
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
+                <dd class="main-desc p-0 mr-0 mb-0 text-light">0</dd>
+              </div>
             </div>
-          </div>
 
-          <div class="col-sm-4 text-center">
-            <a href="#">
-              <img class="main-logo mb-3" src="./img/pakhtakor.svg" alt="" width="250px" height="250px">
+            <div class="d-flex justify-content-center">
+              <dt class="main-desc mr-t-light font-weight-normal text-light">Leaderboard position:</dt>
+              <dd class="main-desc text-light">1</dd>
+            </div>
+          </dl>
+
+        </div>
+
+        <div class="col-8 col-sm-4 mb-4 mb-sm-0 mx-auto rounded">
+          <div class="d-flex flex-column justify-content-center h-100">
+            <button class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+              style="border: 1px solid #d1d1d1" type="button" data-toggle="modal" data-target="#modal">
+              Watch match promo
+            </button>
+
+            <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+              style="border: 1px solid #d1d1d1" href="#">
+              Buy tickets
             </a>
 
-            <h3 class="main-title name h5 font-weight-bold mb-4 text-light">FC Barcelona</h3>
+            <a class="main-btn__group btn btn-light bg-transparent text-light mb-2 rounded"
+              style="border: 1px solid #d1d1d1" href="#">
+              Buy merch
+            </a>
 
-            <dl class="main-dl">
-              <div class="main-description mb-2 d-flex justify-content-center">
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
-                  <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
-                </div>
-
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
-                  <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
-                </div>
-
-                <div class="d-flex">
-                  <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
-                  <dd class="main-desc pbold mr-0 mb-0 text-light">0</dd>
-                </div>
-              </div>
-
-              <div class="d-flex justify-content-center">
-                <dt class="main-desc p-0 font-weight-normal text-light">Leaderboard position:</dt>
-                <dd class="main-desc text-light">10</dd>
-              </div>
-            </dl>
+            <button class="main-btn__group btn btn-light bg-transparent text-light rounded" data-toggle="collapse"
+              data-target="#collapseBtn" style="border: 1px solid #d1d1d1">
+              More info
+            </button>
           </div>
         </div>
-      </div>
 
+        <div class="col-10 col-sm-4 text-center">
+          <a href="#">
+            <img class="main-logo mb-3" src="./img/pakhtakor.svg" alt="" width="250px" height="250px">
+          </a>
+
+          <h3 class="main-title name h5 font-weight-bold mb-4 text-light">FC Barcelona</h3>
+
+          <dl class="main-dl">
+            <div class="main-description mb-2 d-flex justify-content-center">
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
+                <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
+              </div>
+
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">loses:</dt>
+                <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
+              </div>
+
+              <div class="d-flex">
+                <dt class="main-desc p-0 font-weight-normal text-light">Drawns:</dt>
+                <dd class="main-desc pbold mr-0 mb-0 text-light">0</dd>
+              </div>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <dt class="main-desc p-0 font-weight-normal text-light">Leaderboard position:</dt>
+              <dd class="main-desc text-light">10</dd>
+            </div>
+          </dl>
+        </div>
+      </div>
     </main>
   </div>
 
@@ -164,119 +160,121 @@
           </a>
         </li>
       </ul>
-    </div>
 
+      <div class="tab-content mb-4" id="myTabContent">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <div class="container-lg">
+            <div class="row justify-content-center justify-content-md-between">
+              <table class="table table-striped col-lg-5">
+                <thead>
+                  <tr>
+                    <th scope="col">
+                      <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
+                    </th>
+                    <th scope="col">Name:</th>
+                    <th scope="col">Goals:</th>
+                    <th scope="col">Age:</th>
+                    <th>Selected:</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Eden Hazard</td>
+                    <td>7</td>
+                    <td>29</td>
+                    <td><input name="radio" type="checkbox"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Benzema</td>
+                    <td>26</td>
+                    <td>32</td>
+                    <td><input name="radio" type="checkbox"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Modric</td>
+                    <td>12</td>
+                    <td>35</td>
+                    <td><input name="radio" type="checkbox" disabled></td>
+                  </tr>
+                </tbody>
+              </table>
 
-    <div class="tab-content mb-4" id="myTabContent">
-      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div class="container-lg">
-          <div class="row justify-content-center justify-content-md-between">
-            <table class="table table-striped col-lg-5">
-              <thead>
-                <tr>
-                  <th scope="col">
-                    <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
-                  </th>
-                  <th scope="col">Name:</th>
-                  <th scope="col">Goals:</th>
-                  <th scope="col">Age:</th>
-                  <th>Selected:</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Hazard</td>
-                  <td>7</td>
-                  <td>29</td>
-                  <td><input name="radio" type="checkbox"></td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Benzema</td>
-                  <td>26</td>
-                  <td>32</td>
-                  <td><input name="radio" type="checkbox"></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Modric</td>
-                  <td>12</td>
-                  <td>35</td>
-                  <td><input name="radio" type="checkbox" disabled></td>
-                </tr>
-              </tbody>
-            </table>
+              <table class="table table-striped col-lg-5">
+                <thead>
+                  <tr>
+                    <th scope="col">
+                      <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
+                    </th>
+                    <th scope="col">Name:</th>
+                    <th scope="col">Goals:</th>
+                    <th scope="col">Age:</th>
+                    <th>Selected:</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Leo Messi</td>
+                    <td>36</td>
+                    <td>33</td>
+                    <td><input name="radio" type="checkbox"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Grizmann</td>
+                    <td>18</td>
+                    <td>32</td>
+                    <td><input name="radio" type="checkbox"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Pique</td>
+                    <td>4</td>
+                    <td>35</td>
+                    <td><input name="radio" type="checkbox" disabled></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
 
-            <table class="table table-striped col-lg-5">
-              <thead>
-                <tr>
-                  <th scope="col">
-                    <img src="./img/uefa-champions-league-seeklogo.com.svg" alt="" width="30" height="30">
-                  </th>
-                  <th scope="col">Name:</th>
-                  <th scope="col">Goals:</th>
-                  <th scope="col">Age:</th>
-                  <th>Selected:</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Messi</td>
-                  <td>36</td>
-                  <td>33</td>
-                  <td><input name="radio" type="checkbox"></td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Grizmann</td>
-                  <td>18</td>
-                  <td>32</td>
-                  <td><input name="radio" type="checkbox"></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Pique</td>
-                  <td>4</td>
-                  <td>35</td>
-                  <td><input name="radio" type="checkbox" disabled></td>
-                </tr>
-              </tbody>
-            </table>
           </div>
-
         </div>
-      </div>
-      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <div class="py-4 border-bottom d-flex flex-column justify-content-start">
-          <h3 class="h2 font-weight-bold mb-3">Real madrid</h3>
-          <a class="mr-4" href="https://www.youtube.com/watch?v=9mqYGkyMWak&ab_channel=47Football">Full video</a>
-          <iframe class="tab-img" src="https://www.youtube.com/embed/80pBEvJ_6bI" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <div class="py-4 border-bottom d-flex flex-column justify-content-start">
+            <h3 class="main-title h4 font-weight-bold mb-3">Real madrid</h3>
+            <a class="mr-4" href="https://www.youtube.com/watch?v=9mqYGkyMWak&ab_channel=47Football">Full video</a>
+            <iframe class="tab-img" src="https://www.youtube.com/embed/80pBEvJ_6bI" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+          <div class="py-4 d-flex flex-column justify-content-start">
+            <h3 class="main-title h4 font-weight-bold mb-3">FC Barcelona</h3>
+            <a class="mr-4" href="https://youtu.be/idLt1zL5rnE">Full video</a>
+            <iframe class="tab-img" src="https://www.youtube.com/embed/9mqYGkyMWak" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
         </div>
-        <div class="py-4 d-flex flex-column justify-content-start">
-          <h3 class="h4 font-weight-bold mb-3">FC Barcelona</h3>
-          <a class="mr-4" href="https://youtu.be/idLt1zL5rnE">Full video</a>
-          <iframe class="tab-img" src="https://www.youtube.com/embed/9mqYGkyMWak" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+          <h2 class="h2 mb-2">Full of Vitamins!</h2>
+          <p class="text-dark">
+            We work hard to ensure that the fruit and vegetables we sell are fresh and high in quality. If we don’t
+            grow them ourselves, we source them from carefully chosen suppliers, preferring to buy locally whenever
+            possible.
+          </p>
         </div>
-      </div>
 
-      <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-        <h2 class="h2 mb-2">Full of Vitamins!</h2>
-        <p class="text-dark">
-          We work hard to ensure that the fruit and vegetables we sell are fresh and high in quality. If we don’t
-          grow them ourselves, we source them from carefully chosen suppliers, preferring to buy locally whenever
-          possible.
-        </p>
       </div>
-
     </div>
+
+
+
   </div>
 
 
