--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="main-description mb-2 d-flex justify-content-center">
               <div class="d-flex">
                 <dt class="main-desc p-0 font-weight-normal text-light">Wins:</dt>
-                <dd class="main-desc pbold mr-1 mb-0 text-light">10 |</dd>
+                <dd class="main-desc pbold mr-1 mb-0 text-light">0 |</dd>
               </div>
 
               <div class="d-flex">
@@ -165,7 +165,7 @@
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
           <div class="container-lg">
             <div class="row justify-content-center justify-content-md-between">
-              <table class="table table-striped col-lg-5">
+              <table class="table table-sm table-striped col-md-5">
                 <thead>
                   <tr>
                     <th scope="col">
@@ -174,35 +174,31 @@
                     <th scope="col">Name:</th>
                     <th scope="col">Goals:</th>
                     <th scope="col">Age:</th>
-                    <th>Selected:</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Eden Hazard</td>
+                    <td>Hazard</td>
                     <td>7</td>
                     <td>29</td>
-                    <td><input name="radio" type="checkbox"></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
                     <td>Benzema</td>
                     <td>26</td>
                     <td>32</td>
-                    <td><input name="radio" type="checkbox"></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
                     <td>Modric</td>
                     <td>12</td>
                     <td>35</td>
-                    <td><input name="radio" type="checkbox" disabled></td>
                   </tr>
                 </tbody>
               </table>
 
-              <table class="table table-striped col-lg-5">
+              <table class="table table-sm table-striped col-md-5">
                 <thead>
                   <tr>
                     <th scope="col">
@@ -211,7 +207,6 @@
                     <th scope="col">Name:</th>
                     <th scope="col">Goals:</th>
                     <th scope="col">Age:</th>
-                    <th>Selected:</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -220,21 +215,18 @@
                     <td>Leo Messi</td>
                     <td>36</td>
                     <td>33</td>
-                    <td><input name="radio" type="checkbox"></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
                     <td>Grizmann</td>
                     <td>18</td>
                     <td>32</td>
-                    <td><input name="radio" type="checkbox"></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
                     <td>Pique</td>
                     <td>4</td>
                     <td>35</td>
-                    <td><input name="radio" type="checkbox" disabled></td>
                   </tr>
                 </tbody>
               </table>
@@ -245,19 +237,19 @@
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <div class="py-4 border-bottom d-flex flex-column justify-content-start">
             <h3 class="main-title h4 font-weight-bold mb-3">Real madrid</h3>
-            <a class="mr-4" href="https://www.youtube.com/watch?v=9mqYGkyMWak&ab_channel=47Football">Full video</a>
             <iframe class="tab-img" src="https://www.youtube.com/embed/80pBEvJ_6bI" title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+              allowfullscreen>
+            </iframe>
           </div>
           <div class="py-4 d-flex flex-column justify-content-start">
             <h3 class="main-title h4 font-weight-bold mb-3">FC Barcelona</h3>
-            <a class="mr-4" href="https://youtu.be/idLt1zL5rnE">Full video</a>
             <iframe class="tab-img" src="https://www.youtube.com/embed/9mqYGkyMWak" title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
+              allowfullscreen>
+            </iframe>
           </div>
         </div>
 
@@ -286,7 +278,7 @@
   </footer>
 
   <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header d-flex align-content-center">
           <h5 class="modal-title font-weight-bold" id="exampleModalLabel">Real madrid vs FC Barcelona</h5>
@@ -295,10 +287,13 @@
           </button>
         </div>
         <div class="modal-body">
-          <iframe width="100%" height="409" src="https://www.youtube.com/embed/1CNkQwsgbmc" title="YouTube video player"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="100%" height="409" src="https://www.youtube.com/embed/1CNkQwsgbmc"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
     </div>
